hard-gists/8555125/run.log
=== Docker Run Log for 8555125 ===
Started at: Mi 29. Okt 17:50:45 CET 2025

[2025-10-29 17:50:46] START: Running container for 8555125
[2025-10-29 17:50:46] SUCCESS: Container 0247d03cda78f081d7e946f739d2a350fa76f18ec29cb07644f242f2254dd3e2 started for 8555125
=== Container logs for 8555125 ===
  File "/snippet.py", line 11
    print "usage:" + sys.argv[0] + " filename [playlist name]"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 8555125 ===
[2025-10-29 17:50:48] INFO: Container 0247d03cda78f081d7e946f739d2a350fa76f18ec29cb07644f242f2254dd3e2 has stopped
